infrastructure/security/policies/02_default-deny-all-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: nexus-platform
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
